Add content to recipe page

--- a/recipes/iced-coffee.html
+++ b/recipes/iced-coffee.html
@@ -7,5 +7,21 @@
 
     <body>
         <h1>Iced coffee</h1>
+        <img src="./images/coffee.jpg" width="300">
+        <h3>Description</h3>
+        <p>Iced coffee made with an immersion dripper</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>coffee powder</li>
+            <li>boiling water</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Boil water.</li>
+            <li>Place the coffee filter in the dripper.</li>
+            <li>Put the coffee powder in the dripper.</li>
+            <li>Pour boiling water into the dripper and wait 3 minutes.</li>
+            <li>Place the dripper on top of the server to brew the coffee.</li>
+        </ol>
     </body>
 </html>
