Edit the iced coffee recipe

--- a/recipes/iced-coffee.html
+++ b/recipes/iced-coffee.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Iced coffee</h1>
-        <img src="./images/coffee.jpg" width="300">
+        <img src="./images/iced-coffee.jpg" width="300">
         <h3>Description</h3>
         <p>Iced coffee made with an immersion dripper</p>
         <h3>Ingredients</h3>
@@ -22,6 +22,7 @@
             <li>Put the coffee powder in the dripper.</li>
             <li>Pour boiling water into the dripper and wait 3 minutes.</li>
             <li>Place the dripper on top of the server to brew the coffee.</li>
+            <li>Add ice to the coffee.</li>
         </ol>
     </body>
 </html>
