--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/iced-coffee.html">Iced coffee</a>
+        <ul>
+            <li><a href="./recipes/iced-coffee.html">Iced coffee</a></li>
+            <li><a href="./recipes/curry.html">Curry (instant)</a></li>
+            <li><a href="./recipes/soup.html">Soup (instant)</a></li>
+        </ul>
     </body>
 </html>
